# gw2-ai-trading-assistant

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: overlay_position.json
data/knowledge_base/: economy_rules.md  historical_impacts.md  item_categories.md  item_relationships.md
scripts/: backfill_history.py  ingest_knowledge_base.py  run_collectors.py  run_dashboard.py  run_pipeline.py  run_price_collector.py  signal_overlay.py  test_wiki_collector.py  validate_data.py  watch_gw2.pyw
src/gw2trading/: __init__.py  config.py
src/gw2trading/analysis/: accuracy_tracker.py  price_context.py  signal_ranker.py
src/gw2trading/collectors/: datawars2_collector.py  price_collector.py  reddit_collector.py  tracked_items.py  wiki_collector.py
src/gw2trading/dashboard/: app.py
src/gw2trading/dashboard/views/: market.py  patches.py  signals.py
src/gw2trading/db/: database.py  schema.sql
src/gw2trading/rag/: ingestion.py  models.py  pipeline.py  prompts.py  vectorstore.py
src/gw2trading/utils/: logging.py
