[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gw2trading"
version = "0.1.0"
description = "AI-powered trading signal generator for Guild Wars 2's Trading Post"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "praw>=7.7.0",
    "apscheduler>=3.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
rag = [
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
]
dashboard = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
